--- a/src/_data/navigation.yaml
+++ b/src/_data/navigation.yaml
@@ -1,10 +1,9 @@
----
 items:
-  - text: Menu One
-    url: "#"
+  - text: about
+    url: https://musing-neumann-59faac.netlify.app/about
   - text: Menu Two
     url: "#"
   - text: Menu Three
     url: "#"
   - text: Blog
-    url: "/blog"
+    url: /blog
