Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,13 +1,1 @@
-links:
-  - title: about
-    url: https://musing-neumann-59faac.netlify.app/#about
-    desc: about
-  - title: Eleventy
-    url: https://www.11ty.dev/
-    desc: Eleventy is a simpler static site generator.
-  - title: Alpine.js
-    url: https://github.com/alpinejs/alpine
-    desc: A minimal framework for composing JavaScript behavior in your markup.
-  - title: Tailwind CSS
-    url: https://tailwindcss.com/
-    desc: A utility-first CSS framework for rapidly building custom designs.
+links: []
