Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -2,3 +2,6 @@ links:
   - title: ♡
     url: /blog
     desc: ♡
+  - url: https://transdisciplinary.art/about
+    title: transdisciplinary.art
+    desc: ♡
