Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,7 +1,7 @@
 links:
   - title: ♡
     url: /blog
-    desc: ♡
-  - url: https://transdisciplinary.art/about
-    title: transdisciplinary.art
-    desc: ♡
+    desc: news
+  - url: https://transdisciplinary.art/about_blank
+    title: ♡
+    desc: transdisciplinary.art
