Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -2,6 +2,6 @@ links:
   - title: ♡
     url: /blog
     desc: news
-  - url: https://transdisciplinary.art/about_blank
+  - url: https://transdisciplinary.art
     title: ♡
     desc: transdisciplinary.art
