Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -5,3 +5,6 @@ links:
   - url: https://transdisciplinary.art
     title: ♡
     desc: transdisciplinary.art
+  - url: /posts/abraham-kelly/
+    title: ABRAHAM KELLY
+    desc: 22/5 - 17/7
