Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,10 +1,10 @@
 links:
+  - url: https://rezgauche.be/posts/initial-proposal-forms-of-work/
+    title: lets call on possibilities into forms of work
+    desc: open call deadline 5/9/2021
   - url: /posts/abraham-kelly/
     title: ABRAHAM KELLY
-    desc: 22/5 - 17/7
-  - title: ♡
-    url: /blog
-    desc: news
+    desc: exposition 22/5 - 17/7
   - url: https://transdisciplinary.art
-    title: ♡
-    desc: transdisciplinary.art
+    title: transdisciplinary.art
+    desc: info@transdisciplinary.art
