Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,10 +1,7 @@
 links:
   - url: https://rezgauche.be/posts/initial-proposal-forms-of-work/
-    title: lets call on possibilities into forms of work
-    desc: open call deadline 5/9/2021
-  - url: /posts/abraham-kelly/
-    title: ABRAHAM KELLY
-    desc: exposition 22/5 - 17/7
+    title: "Open Call "
+    desc: apply before 5/9/2021
   - url: https://transdisciplinary.art
     title: transdisciplinary.art
     desc: info@transdisciplinary.art
