Update Settings “links”

--- a/src/_data/quicklinks.yaml
+++ b/src/_data/quicklinks.yaml
@@ -1,4 +1,7 @@
 links:
+  - url: https://rezgauche.be/posts/s-w-e-a-t/
+    title: S.W.E.A.T.
+    desc: 19 till 22 July
   - url: https://rezgauche.be/posts/initial-proposal-forms-of-work/
     title: "Open Call "
     desc: apply before 5/9/2021
